[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-triage-env"
version = "1.0.0"
description = "SRE Incident Triage Simulator using OpenEnv"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "openenv-core>=0.2.3",
    "requests>=2.31.0"
]

[project.scripts]
# Fixed to point to the server folder
server = "server.app:main"